# vanguard_bms

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: Vanguard_Flex_Battery_4BAT_FormA.dbc  bms_diagnostics.yaml
launch/: bms.launch
scripts/: driver
